objects/VR_Related_Case__c.object
<CustomObject>
    <description>STS PR3.0 - Junction Object between Case and Visit Report</description>
    <fields>
        <fullName>Case_Name__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;+ Case__r.Id, Case__r.Subject)</formula>
        <label>Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ Case__r.Id, Case__r.CaseNumber)</formula>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Cases</relationshipLabel>
        <relationshipName>Related_Cases</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Case__r.Contact.FirstName  &amp; &quot; &quot; &amp; Case__r.Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <formula>Case__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>IF(
  ISBLANK(Case__r.Owner:User.Id), /* If blank, it&apos;s a queue */
  Case__r.Owner:Queue.QueueName,
  Case__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Case__r.Owner:User.LastName
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>Text(Case__r.Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>Text(Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Report__c</fullName>
        <label>Visit Report</label>
        <referenceTo>Visit_Report__c</referenceTo>
        <relationshipLabel>Related Cases</relationshipLabel>
        <relationshipName>Related_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>of_Related_Cases__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Related Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Related Case</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Related Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>